--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+.env
+.viscode/
+
 
 # dependencies
 node_modules/
