--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^7.1.8",
     "@sentry/react-native": "^7.6.0",
     "@supabase/supabase-js": "^2.79.0",
+    "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
     "expo": "54.0.23",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
