--- a/app.json
+++ b/app.json
@@ -16,7 +16,10 @@
         "NSLocationAlwaysUsageDescription": "MasBosque necesita acceso a tu ubicación continua en segundo plano para proveer servicios de rescate en caso de emergencia.",
         "NSBluetoothAlwaysUsageDescription": "MasBosque necesita acceso a Bluetooth para conectarse a dispositivos de emergencia y enviar alertas SOS.",
         "NSBluetoothPeripheralUsageDescription": "MasBosque necesita acceso a Bluetooth para conectarse a dispositivos de emergencia y enviar alertas SOS.",
-        "UIBackgroundModes": ["bluetooth-central", "location"]
+        "UIBackgroundModes": [
+          "bluetooth-central",
+          "location"
+        ]
       },
       "bundleIdentifier": "com.anonymous.masbosque"
     },
@@ -69,7 +72,8 @@
           }
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true,
