--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mas-bosque",
-    "slug": "mas-bosque",
+    "name": "+BosqueManu",
+    "slug": "+BosqueManu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
